magosinpija, bloqueadoxvillero
El metodo batalla que se agrego antes no funcionaba.
Asi que agregue una interfaz(UnidadDeCombate) comun para guerrero y ejercito y terminar de armar bien el composite. Agruege tests, en eclipse me tiraban un 95% pero bueno, comente las clases FileManager y Heap que no se usaban. No las borre por las dudas, pero creo que habria que sacarlas.
Bueno nadie va leer esto asi que seria eso, buenas noches.