@@ -1,16 +1,18 @@
 package com.tierrafantasia.entidades;
 
+import java.util.LinkedList;
+
 //import com.tierrafantasia.utils.Heap;
 
-import java.util.ArrayList;
-import java.util.List;
 
 
-public class Ejercito {
 
-	public List<Guerrero> unidades = new ArrayList<Guerrero>();
+public class Ejercito implements UnidadDeCombate{
+
+	public LinkedList<Guerrero> unidades = new LinkedList<Guerrero>();
 	public  Bando bando;
-
+	public Ejercito aliado;
+	
 	public Ejercito(int cantUnidades, Raza raza, Bando bando) {
 
 		this.bando = bando;
@@ -22,59 +24,62 @@ public class Ejercito {
 		}
 	}
 
-
+	
 	public int batalla(Ejercito enemigo){
-		Guerrero guerreroAliado = this.unidades.getFirst();
-		Guerrero guerreroEnemigo = enemigo.unidades.getFirst();
-
+		
 		while(!this.sinUnidades() && !enemigo.sinUnidades()){ //pelea a muerte
-
-			while(!guerreroAliado.isDesmayado()){		//mientras no se desmaye el nuestro que pelee con el otro
-				guerreroAliado.atacar(guerreroEnemigo);
-				if(!guerreroEnemigo.isDesmayado()){			// si el otro se desmaya, pasa el siguiente, y sino le pega al nuestro
-					guerreroEnemigo.atacar(guerreroAliado);
-				} else {
-					enemigo.unidades.removeFirst();
-					guerreroEnemigo = enemigo.unidades.getFirst();
-				}
-			}
-
-			this.unidades.removeFirst();			//si se desmayo el nuestro, se reasigna
-			guerreroAliado = this.unidades.getFirst();
-
+			this.atacar(enemigo);
+			enemigo.atacar(this);
 		}
+		
 		if(!this.sinUnidades()){		//si me quedaron peleadores y hay un herido, se manda atras de tod0
+			Guerrero guerreroAliado = this.unidades.getFirst();
 			if(guerreroAliado.getSaludActual()!=guerreroAliado.getSaludInicial()){
 				this.unidades.removeFirst();
 				this.unidades.add(guerreroAliado);
 			}
-			return this.getCantUnidades();		//se devuelve la cantidad de sobrevivientes
+			
 		}
-		return 0; //si no hay sobrevivientes se devuelve 0
+		return this.getCantUnidades();		//se devuelve la cantidad de sobrevivientes
+		 //si no hay sobrevivientes se va a devolver 0 de todas formas
 	}
-
-
-
-
-	public void descansar(Ejercito aliado) {
+	
+	
+	//para poder hacer que el metodo fuera comun entre guerrero y ejercito
+	//el ejercito aliado que se va a sumar no se pasa por parametro como antes sino que ya tiene que ser
+	//un atributo de la instancia, esto ya estaria configurado en el metodo RecorrerMapa y esta en las pruebas
+	public void descansar() {
 		
 		for (Guerrero guerrero : this.unidades){  //se aplica la funcion descansar a los aliados
 			guerrero.descansar();
 		}
-
+		
 		int mitad = aliado.unidades.size()/2;
 		for(int i = 0; i < mitad; i++)
 			this.unidades.addFirst(aliado.unidades.removeFirst());
 		
 	}
+	
+	public void setAliado(Ejercito aliado) {
+		this.aliado = aliado;
+	}
 
-	//cuando un ejercito es atacado recibe el daño y lo pasa a su primer guerrero en la cola/heap
+	
+	public void atacar(UnidadDeCombate enemigo) {
+		Ejercito ejEnemigo = (Ejercito) enemigo;
+		if(this != enemigo && !ejEnemigo.sinUnidades() && !this.sinUnidades()) {
+			this.unidades.getFirst().atacar(enemigo);
+			
+		}
+	}
+
 	public void esAtacado(int damage) {
-		Guerrero unidad = this.unidades.get(0);
-		unidad.esAtacado(damage);
-
-		if(unidad.isDesmayado())  //si se queda sin salud, se saca de la cola
-			this.unidades.remove(unidad);
+		Guerrero guerreroAtacado = this.unidades.getFirst();
+		guerreroAtacado.esAtacado(damage);
+		
+		if(guerreroAtacado.isDesmayado())
+			this.unidades.removeFirst();
+		
 	}
 
 	public boolean sinUnidades() {
